# EPOS2ROSBridge

epos2_bridge/: package.xml  patch_stream_phase1.py  setup.cfg  setup.py
epos2_bridge/config/: epos2_arm_controller.yaml  epos2_arm_controller.yaml.bak_j3only
epos2_bridge/epos2_bridge/: epos2_arm_controller.py  epos2_arm_controller.py.bak_patch  epos2_arm_controller.py.bak_tune  epos2_j3_bridge.py  epos2_j3_bridge.py.bak_adaptive_sampling_v2  epos2_j3_bridge.py.bak_timed_mode  pvt_reduce.py
epos2_bridge/launch/: epos2_arm.launch.py  epos2_arm_controller.launch.py  epos2_j1_bridge.launch.py  epos2_j2_bridge.launch.py  epos2_j3_bridge.launch.py  epos2_j4_bridge.launch.py  epos2_j5_bridge.launch.py  epos2_j6_bridge.launch.py  epos2_system.launch.py
epos2_bridge/srv/: MoveDelta.srv
epos2_bridge_interfaces/: CMakeLists.txt  package.xml
epos2_bridge_interfaces/srv/: MoveAbsolute.srv  MoveAbsoluteTimed.srv
moveit_config/: .setup_assistant  package.xml
moveit_config/config/: bus_j3_ipm_WORKING.yml  bus_j3_ppm.yml  epos2_slave_ipm_WORKING.dcf  epos2_slave_ppm.dcf  joint_limits.yaml  kinematics.yaml  master.bin.bak  master.dcf  moveit_controllers.yaml  moveit_controllers.yaml.bak_j3only  my_robot.ros2_control.j3_only.xacro  my_robot.ros2_control.xacro  my_robot_j3_debug.urdf.xacro  ros2_controllers.yaml  ros2_controllers_j3_forward.yaml  ros2_controllers_j3_jtc.yaml
moveit_config/launch/: agrobot.launch.py  demo.launch.py  epos2_ppm.sh  j3_canopen_driver_only.launch.py  j3_canopen_driver_only_ipm.launch.py  move_group.launch.py  (+9 more)
my_robot_description/: package.xml
(+25 files in other folders)
